[package]
name = "scoped_spawn"
description = "Full structured concurrency for asynchronous programming."
version = "0.2.1"
authors = ["Scoped Spawn Authors"]
edition = "2018"
license = "MIT"
keywords = ["structured", "concurrency", "async", "task"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
repository = "https://github.com/upsp/scoped_spawn"

[badges]
gitlab = { repository = "upsp/scoped_spawn" }

[dependencies]
futures = { version = "0.3.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio = { version = "0.2.2", features = ["macros", "rt-core", "time"] }
